--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   mqtt_client: ^9.0.0
   provider: ^6.0.5
+  gauge_indicator: ^0.4.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
