--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  fl_chart: ^0.40.0
   flutter:
     sdk: flutter
+  gauge_indicator: ^0.4.3
   mqtt_client: ^9.0.0
   provider: ^6.0.5
-  gauge_indicator: ^0.4.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
